--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "devDependencies": {
         "electron": "^12.0.7",
         "nodemon": "^1.19.4"
+    },
+    "dependencies": {
+        "three": "^0.128.0",
+        "three-gltf-loader": "^1.111.0"
     }
 }
